--- a/.github/workflows/update-niv.yml
+++ b/.github/workflows/update-niv.yml
@@ -18,7 +18,7 @@ jobs:
     - run: GITHUB_PATH= nix-shell --run "niv update"
     - uses: cachix/cachix-action@v6
       with:
-        name: nix-getting-started-template
+        name: mjlbach
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
